@@ -2,7 +2,6 @@ package com.avinya.application.service;
 
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -28,28 +27,28 @@ public class ProductService {
 
   @PostConstruct
   public void loadProductsFromDB() {
+
+    final Random randomGen = new Random();
+
     productList = IntStream.rangeClosed(1, 100)
-      .mapToObj(i -> Product.builder()
-        .productId(i)
-        .name("product " + i)
-        .qty(new Random().nextInt(10))
-        .price(new Random().nextInt(5000))
-        .build())
-      .collect(Collectors.toList());
+      .mapToObj(
+        productId -> new Product(productId, "product " + productId, randomGen.nextInt(10), randomGen.nextInt(5000)))
+      .toList();
+
   }
 
   public List<Product> getProducts() {
     return productList;
   }
 
-  public Product getProduct(int id) {
+  public Product getProduct(final int id) {
     return productList.stream()
-      .filter(product -> product.getProductId() == id)
+      .filter(product -> product.productId() == id)
       .findAny()
       .orElseThrow(() -> new RuntimeException("product " + id + " not found"));
   }
 
-  public String addUser(UserInfo userInfo) {
+  public String addUser(final UserInfo userInfo) {
     userInfo.setPassword(passwordEncoder.encode(userInfo.getPassword()));
     repository.save(userInfo);
     return "user added to system ";
